k8s/web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: labbox
  namespace: labbox
spec:
  selector:
    app: labbox-ephys
    tier: web
  ports:
    - name: http
      protocol: TCP
      port: 80
