k8s/web/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web
  namespace: labbox
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts:
        - labbox.lastingdynamics.net
      secretName: web-tls
  rules:
    - host: labbox.lastingdynamics.net
      http:
        paths:
          - path: /
            backend:
              serviceName: web
              servicePort: 80
